@@ -1,3 +1,8 @@
+* 2007-08-10 - tobias.prinz@open-xchange.com
+
+ - Fixed bug #8527: Versitparser now does not break if empty properties
+   are in a VCard or ICal file.
+   
 * 2007-08-10 - thorben.betten@open-xchange.com
 
  - Forgot to delete temporary uploaded files manually after sending message
